# problem_solving_with_algorithms_and_data_structures_using_python

./: pyproject.toml
chapter_1/: exercises.ipynb
chapter_1/.ipynb_checkpoints/: exercises-checkpoint.ipynb
chapter_2/: notes.ipynb
chapter_3/: exercises.ipynb  notes.ipynb
